Fix alignment for landing page and changed font.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,17 +5,28 @@
  }
 
  .btn-large {
-  background-color: #86E373;
+  background-color: grey;
  }
 
  .btn-large:hover {
    background-color: #E7EAEC
  }
 
- .welcome-page {
-   padding-bottom: 50px;
-   padding-top: 50px;
+ .logo_text {
+   color: grey;
+   align-items: center;
  }
 
- body {
+ .logo_image {
+   display: inline-block;
+   vertical-align:middle;
+ }
+
+ .landing {
+  display: -ms-flexbox;
+  display:flexbox;
+  display:flex;
+  text-align:center;
+  align-items:center;
+  justify-content:center;
  }
